@@ -1,4 +1,3 @@
-use 5.008001;
 use strict;
 use warnings;
 use Test::More 0.96;
