@@ -4,6 +4,8 @@ Revision history for Test-DiagINC
 
     - Minimize amount of reported modules: anything Test::DiagINC loads
       in order to compile the report is excluded
+    - No longr chdir() during the local-library heuristic
+    - No non-core runtime dependencies, add 5.6 support
 
 0.002     2014-02-04 22:17:58-05:00 America/New_York
 
